// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress renders with colors 1`] = `
.emotion-0 {
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  width: 16px;
  height: 16px;
}

.emotion-2 {
  stroke: #fcc;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * (16px - 4px) / 2);
}

.emotion-3 {
  -webkit-transition: all 200ms;
  transition: all 200ms;
  stroke: #ff4747;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * (16px - 4px) / 2);
  stroke-dashoffset: calc(calc(3.141592653589793 * 2 * (16px - 4px) / 2) - (0 / 100 * calc(3.141592653589793 * 2 * (16px - 4px) / 2)));
}

<div
  class="emotion-0"
  data-testid="test-progress-red"
>
  <svg
    class="emotion-1"
  >
    <circle
      class="emotion-2"
      cx="calc(16px / 2)"
      cy="calc(16px / 2)"
      fill="none"
      r="calc((16px - 4px) / 2)"
      stroke-width="4px"
    />
    <circle
      class="emotion-3"
      cx="calc(16px / 2)"
      cy="calc(16px / 2)"
      fill="none"
      r="calc((16px - 4px) / 2)"
      stroke-width="4px"
    />
  </svg>
</div>
`;

exports[`Progress renders with colors 2`] = `
.emotion-0 {
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  width: 16px;
  height: 16px;
}

.emotion-2 {
  stroke: #ebebeb;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * (16px - 4px) / 2);
}

.emotion-3 {
  -webkit-transition: all 200ms;
  transition: all 200ms;
  stroke: #1f1f1f;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * (16px - 4px) / 2);
  stroke-dashoffset: calc(calc(3.141592653589793 * 2 * (16px - 4px) / 2) - (0 / 100 * calc(3.141592653589793 * 2 * (16px - 4px) / 2)));
}

<div
  class="emotion-0"
  data-testid="test-progress-gray"
>
  <svg
    class="emotion-1"
  >
    <circle
      class="emotion-2"
      cx="calc(16px / 2)"
      cy="calc(16px / 2)"
      fill="none"
      r="calc((16px - 4px) / 2)"
      stroke-width="4px"
    />
    <circle
      class="emotion-3"
      cx="calc(16px / 2)"
      cy="calc(16px / 2)"
      fill="none"
      r="calc((16px - 4px) / 2)"
      stroke-width="4px"
    />
  </svg>
</div>
`;

exports[`Progress renders with colors 3`] = `
.emotion-0 {
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  width: 16px;
  height: 16px;
}

.emotion-2 {
  stroke: #321321;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * (16px - 4px) / 2);
}

.emotion-3 {
  -webkit-transition: all 200ms;
  transition: all 200ms;
  stroke: #123123;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * (16px - 4px) / 2);
  stroke-dashoffset: calc(calc(3.141592653589793 * 2 * (16px - 4px) / 2) - (0 / 100 * calc(3.141592653589793 * 2 * (16px - 4px) / 2)));
}

<div
  class="emotion-0"
  data-testid="test-progress-custom"
>
  <svg
    class="emotion-1"
  >
    <circle
      class="emotion-2"
      cx="calc(16px / 2)"
      cy="calc(16px / 2)"
      fill="none"
      r="calc((16px - 4px) / 2)"
      stroke-width="4px"
    />
    <circle
      class="emotion-3"
      cx="calc(16px / 2)"
      cy="calc(16px / 2)"
      fill="none"
      r="calc((16px - 4px) / 2)"
      stroke-width="4px"
    />
  </svg>
</div>
`;

exports[`Progress renders with custom width 1`] = `
.emotion-0 {
  position: relative;
  width: 100px;
  height: 100px;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  width: 100px;
  height: 100px;
}

.emotion-2 {
  stroke: #ebebeb;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * (100px - 10px) / 2);
}

.emotion-3 {
  -webkit-transition: all 200ms;
  transition: all 200ms;
  stroke: #1e6fff;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * (100px - 10px) / 2);
  stroke-dashoffset: calc(calc(3.141592653589793 * 2 * (100px - 10px) / 2) - (50 / 100 * calc(3.141592653589793 * 2 * (100px - 10px) / 2)));
}

<div
  class="emotion-0"
  data-testid="test-progress"
>
  <svg
    class="emotion-1"
  >
    <circle
      class="emotion-2"
      cx="calc(100px / 2)"
      cy="calc(100px / 2)"
      fill="none"
      r="calc((100px - 10px) / 2)"
      stroke-width="10px"
    />
    <circle
      class="emotion-3"
      cx="calc(100px / 2)"
      cy="calc(100px / 2)"
      fill="none"
      r="calc((100px - 10px) / 2)"
      stroke-width="10px"
    />
  </svg>
</div>
`;

exports[`Progress renders with different status 1`] = `
.emotion-0 {
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  width: 16px;
  height: 16px;
}

.emotion-2 {
  stroke: #ebebeb;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * (16px - 4px) / 2);
}

.emotion-3 {
  -webkit-transition: all 200ms;
  transition: all 200ms;
  stroke: #00aa5b;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * (16px - 4px) / 2);
  stroke-dashoffset: calc(calc(3.141592653589793 * 2 * (16px - 4px) / 2) - (0 / 100 * calc(3.141592653589793 * 2 * (16px - 4px) / 2)));
}

<div
  class="emotion-0"
  data-testid="test-progress-success"
>
  <svg
    class="emotion-1"
  >
    <circle
      class="emotion-2"
      cx="calc(16px / 2)"
      cy="calc(16px / 2)"
      fill="none"
      r="calc((16px - 4px) / 2)"
      stroke-width="4px"
    />
    <circle
      class="emotion-3"
      cx="calc(16px / 2)"
      cy="calc(16px / 2)"
      fill="none"
      r="calc((16px - 4px) / 2)"
      stroke-width="4px"
    />
  </svg>
</div>
`;

exports[`Progress renders with different status 2`] = `
.emotion-0 {
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  width: 16px;
  height: 16px;
}

.emotion-2 {
  stroke: #ebebeb;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * (16px - 4px) / 2);
}

.emotion-3 {
  -webkit-transition: all 200ms;
  transition: all 200ms;
  stroke: #ff4747;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * (16px - 4px) / 2);
  stroke-dashoffset: calc(calc(3.141592653589793 * 2 * (16px - 4px) / 2) - (0 / 100 * calc(3.141592653589793 * 2 * (16px - 4px) / 2)));
}

<div
  class="emotion-0"
  data-testid="test-progress-error"
>
  <svg
    class="emotion-1"
  >
    <circle
      class="emotion-2"
      cx="calc(16px / 2)"
      cy="calc(16px / 2)"
      fill="none"
      r="calc((16px - 4px) / 2)"
      stroke-width="4px"
    />
    <circle
      class="emotion-3"
      cx="calc(16px / 2)"
      cy="calc(16px / 2)"
      fill="none"
      r="calc((16px - 4px) / 2)"
      stroke-width="4px"
    />
  </svg>
</div>
`;

exports[`Progress renders with steps 1`] = `
.emotion-0 {
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  width: 16px;
  height: 16px;
}

.emotion-2 {
  stroke: #ebebeb;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * (16px - 4px) / 2);
}

.emotion-3 {
  -webkit-transition: all 200ms;
  transition: all 200ms;
  stroke: #1e6fff;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * (16px - 4px) / 2);
  stroke-dashoffset: calc(calc(3.141592653589793 * 2 * (16px - 4px) / 2) - (0 / 100 * calc(3.141592653589793 * 2 * (16px - 4px) / 2)));
}

<div
  class="emotion-0"
  data-testid="test-progress"
>
  <svg
    class="emotion-1"
  >
    <circle
      class="emotion-2"
      cx="calc(16px / 2)"
      cy="calc(16px / 2)"
      fill="none"
      r="calc((16px - 4px) / 2)"
      stroke-width="4px"
    />
    <circle
      class="emotion-3"
      cx="calc(16px / 2)"
      cy="calc(16px / 2)"
      fill="none"
      r="calc((16px - 4px) / 2)"
      stroke-width="4px"
    />
  </svg>
</div>
`;
